# skylers-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
src/skyler_cli/core/bootstrap/: system.py
src/skyler_cli/core/bootstrap/system_template/: .bashrc  vimrc
src/skyler_cli/core/bootstrap/system_template/neovim_conf/: README.md  init.lua
tests/bootstrap/: test_system_bootstrap.py
tests/cli/: test_main.py
tests/dicom/: dicom_parse.py
