[tool.poetry]
name = "skyler-cli"
version = "0.1.0"
description = ""
authors = ["bouldersky <skyarnold1@me.com>"]
readme = "README.md"
packages = [{include = "skyler_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
