[tool.poetry]
name = "skyler-cli"
version = "0.1.0"
description = ""
authors = ["bouldersky <skyarnold1@me.com>"]
readme = "README.md"
packages = [{include = "skyler_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
