[tool.poetry]
name = "skyler-cli"
version = "0.1.0"
description = ""
authors = ["bouldersky <skyarnold1@me.com>"]
readme = "README.md"
packages = [{include = "skyler_cli", from = "src"}]

[tool.poetry.scripts]
sc = "skyler_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.8.0"}
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
